# spec-atlas-ki-platform

./: .env.example  .env.production.example  .gitignore  =1.23.0  AGENTS.md  API_CONTRACT.md  ARCHITECTURE-E2E.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  HANDOFF-PHASE2.md  Makefile  PROGRESS.md  README.md  SETUP_AND_RUN.md  STATUS_REPORT.md  SYSTEM_STATUS.md  SYSTEM_STATUS_AND_REMEDIATION.md  TASKS.md  alembic.ini  docker-compose.yml  init-db.sql  pyproject.toml  railway.json  spec_atlas_v2.md  vercel.json
alembic/versions/: 001_create_sessions_table.py  002_add_session_id_to_tables.py  003_add_session_id_to_spec_db.py  004_create_groq_key_status.py
diagrams/: README.md  d01-system-context-c4-level-1.mmd  d02-container-and-component-view.mmd  d03-multi-layer-knowledge-model-l1-l4.mmd  d04-data-model-erd---analysis-db.mmd  d05-data-model-erd---spec-db.mmd  d06-ingestion-sequence.mmd  d07-query-rag-sequence.mmd  d08-provider-abstraction.mmd  d09-mcp-agent-integration.mmd  d10-frontend-architecture.mmd  d11-deployment-and-runtime-topology.mmd
docs/: API_CONTRACT.md  DECISIONS.md  DEPLOYMENT.md  HANDOFFS.md  MCP_USAGE.md  PLAYBOOK.md  PRODUCT_OVERVIEW.md  PROMPTS.md  SETUP_AND_RUN.md  STATUS_REPORT.md  SYSTEM_STATUS.md  TASKS.md  TESTING.md
docs/decisions/: ADR-0001-v1-key-decisions.md  ADR-0002-toolchain-and-offline-defaults.md  ADR-0003-phase0-recovery.md
docs/frontend/: FRONTEND-MAP.md  README.md
docs/phases/: 00-MASTER-PLAN.md  PHASE-0.md  PHASE-1.md  PHASE-2.md  PHASE-3.md  PHASE-4.md  PHASE-5.md  PROMPT-PHASE-0.md  PROMPT-PHASE-1.md  PROMPT-PHASE-2.md  PROMPT-PHASE-3.md  PROMPT-PHASE-4.md  PROMPT-PHASE-5.md
docs/status/: API_RECOVERY_2026-06-21.md  FINAL_SESSION_COMPLETE.md  NEXT_STEPS.md  PENDING_ITEMS.md  PHASE_STATUS.md  PROJECT-STATE-REPORT.md  SESSION_2026-06-21_SUMMARY.md
frontend/: .env.example  .gitignore  README.md  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/scripts/: check-no-mock-imports.mjs
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_ingest_jobs_table.py  0003_source_units_and_doc_sources.py  0004_git_commits_and_jira.py  0005_staleness_detected_at.py  0006_ingest_eta_tracking.py  0007_add_session_id_to_specs.py  0008_add_sessions_and_session_id.py
specs/: FEATURES.md
specs/architecture/: ARCHITECTURE.md  DATA-MODEL.md  INTEGRATIONS.md  NFR.md
tasks/: BOARD.md
(+825 files in other folders)
