[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec-atlas"
version = "0.0.0"
description = "Map any codebase into a knowledge graph, generate grounded specs, and serve them to humans and AI agents. Local-first, zero cost, multi-language."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

# Runtime dependencies for the whole F-000 foundation. All have a sufficient
# free tier or run locally (NFR: $0 cost). Later F-000 tasks own their modules
# but rely on these being declared here (pyproject is owned by T-000.1).
dependencies = [
  # API
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "slowapi>=0.1",  # Rate limiting
  "python-multipart>=0.0.9",  # multipart/form-data parsing (POST /api/documents)
  # Config / validation
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  # Storage: SQLAlchemy 2.0 + Alembic + psycopg3 + pgvector types
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "pgvector>=0.3",
  # Parsing (L1 substrate). Grammars as prebuilt wheels — multi-language from v1.
  "tree-sitter>=0.23",
  "tree-sitter-python>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-typescript>=0.23",
  # Embeddings (local, CPU, zero cost)
  "fastembed>=0.3",
  # LLM provider HTTP + resilience (429/timeout/cold-start retry)
  "httpx>=0.27",
  "tenacity>=8.2",
  "jsonschema>=4.21",
  # Multi-source adapters (Phase 1+)
  "PyMuPDF>=1.23.0",  # PDF parsing
  "openpyxl>=3.0",  # Excel parsing
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/spec-atlas/spec-atlas"

[tool.hatch.build.targets.wheel]
packages = ["src/spec_atlas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
# Marker for tests that require a live Postgres; skipped offline by default.
markers = [
  "db: requires a live Postgres (ANALYSIS_DB_URL / SPEC_DB_URL reachable)",
  "real_provider: hits a real LLM/embedding provider (never run in CI)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Sensible default rule set; behavior-focused, not pedantic.
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.isort]
known-first-party = ["spec_atlas"]
